# container-diffoscope

./: .gitignore  .hadolint.yaml  Dockerfile  README.md  Setup.md  Taskfile.yaml  default.nix  devbox.json  docs.md  flake.nix  install.sh  pyproject.toml  run_meta_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  flake-ci.yaml  integration-tests.yaml  integration-tests_v2.yaml  nix-ci.yaml  release.yaml
container_diffoscope/: __init__.py  comparator.py  diffoscope_runner.py  extractor.py  main.py
deployment/Formula/: container-diffoscope.rb
docs/: dev.md  install.md
tasks/: integration-tests.yaml  lint.yaml  nix.yaml  python.yaml
tests/: README.md
tests/integration_tests/empty_file/: docker-compose.yaml  modified.Dockerfile
tests/integration_tests/empty_folder/: modified.Dockerfile
tests/integration_tests/modified_file/: base.Dockerfile  docker-compose.yaml  modified.Dockerfile
tests/meta_tests/filesystem_empty_file/: modified.Dockerfile
tests/meta_tests/filesystem_empty_file/results/: filesystem_results.md
tests/meta_tests/filesystem_empty_folder/: modified.Dockerfile  run.sh
tests/meta_tests/filesystem_empty_folder/results/: filesystem_results.md
tests/unit_tests/: test_changed_files.py  test_cleanup_cache.py  test_compare_file_lists.py  test_filter_files.py  test_get_common_files.py  test_load_list_to_dataframe.py
tests/unit_tests/filesystem_comparison/: test_changed_files.py  test_cleanup_cache.py  test_compare_file_lists.py  test_filter_files.py  test_get_common_files.py  test_load_list_to_dataframe.py
