[tool.poetry]
name = "container-diffoscope"
version = "0.1.0"
description = ""
authors = ["Krzysztof Ignasiak <141998545+kkignasiak98@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "container_diffoscope" }]

[tool.poetry.scripts]
container-diffoscope = "container_diffoscope.main:main"

[tool.poetry.dependencies]
python = "^3.12"
typer = "0.15.2"
polars = "1.26.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.11.2"
pytest = "8.3.5"
coverage = "7.8.0"
pyright = "1.1.398"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
    ".env",
    ".venv",
    "*__init__.py*",
    "*/site-packages/*",
    "*/distutils/*",
    "*pipelines.py",
    "*examples/*",
    "unit_test/*",
]
branch = true

[tool.coverage.report]
fail_under = 60


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

extend-include = ["*.ipynb"]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
addopts = "--verbose" # run pytest in verbose mode
console_output_style = "progress" #  the default, could be change to "classic" if some problems with displaying results in the terminal occur
testpaths = [
    "unit_tests",
    "integration",
]


[tool.pyright]

include = [".", "tests"]
exclude = ["**/__pycache__", ".venv", ".devbox"]

pythonVersion = "3.11"
pythonPlatform = "All"

reportMissingImports = "error"

typeCheckingMode = "basic"

reportDeprecated = "warning"
reportUnusedVariable = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
